--- a/contact_me.html
+++ b/contact_me.html
@@ -21,17 +21,27 @@
 		    
 		    <div class="collapse navbar-collapse" id="globalNav">
 		        <ul class="navbar-nav mr-auto">
-		        <li class="nav-item active">
+		            <li class="nav-item active">
 		        	<a class="nav-link" href="index.html">Home</a>
-		        </li>
-		        <li class="nav-item">
+		            </li>
+		            <li class="nav-item">
 		            <a class="nav-link" href="portfolio.html">Portfolio</a>
-		        </li>
-		        <li class="nav-item">
-		            <a class="nav-link" href="blog.html">Blog</a>
-		        </li>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="blog1.html">Blog</a>
+		            </li>
 		        </ul>
-		    </div>
+			    <ul class="navbar-nav">
+			         <li class="nav-item dropdown">
+			             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Social networks</a>
+			                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			                    <a class="dropdown-item" href="#">Twitter</a>
+			                    <a class="dropdown-item" href="#">Facebook</a>
+			                    <a class="dropdown-item" href="#">LinkedIn</a>
+			                </div>
+			            </li>
+			        </ul>
+			    /div>
 		    </div>
 		</nav> 
 		<main class="container mt-3">
