--- a/contact_me.html
+++ b/contact_me.html
@@ -28,7 +28,7 @@
 		            <a class="nav-link" href="portfolio.html">Portfolio</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="blog1.html">Blog</a>
+		                <a class="nav-link" href="blog1.html">Blog-Post</a>
 		            </li>
 		        </ul>
 			    <ul class="navbar-nav">
